--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -24,6 +24,9 @@
     <tr>
      <td width="100" id="leftcol">
       <div id="projnav">
+   Current Module:   
+   <a href="$link.setPage("PickModule.vm")">$scarabR.CurrentModule.Name</a>
+   <hr>
       <form action="$link.setPage("ViewIssue.vm")" method="get">
    Issue# <input type="text" name="id" size="8" maxlength="255" />
       <input type="submit" name="Submit" value="Find" />
