renamed Pick -> Select (pick seemed to weird of a name)
changed the SelectModule.vm to execute an action instead of just setting
parameters. this allows us more control over things in the future

--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -25,7 +25,7 @@
      <td width="100" id="leftcol">
       <div id="projnav">
    Current Module:   
-   <a href="$link.setPage("PickModule.vm")">$scarabR.CurrentModule.Name</a>
+   <a href="$link.setPage("SelectModule.vm")">$scarabR.CurrentModule.Name</a>
    <hr>
       <form action="$link.setPage("ViewIssue.vm")" method="get">
    Issue# <input type="text" name="id" size="8" maxlength="255" />
