--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -24,9 +24,11 @@
     <tr>
      <td width="100" id="leftcol">
       <div id="projnav">
+#if ($scarabR.CurrentModule)
    Current Module:   
    <a href="$link.setPage("SelectModule.vm")">$scarabR.CurrentModule.Name</a>
    <hr>
+#end
       <form action="$link.setPage("ViewIssue.vm")" method="get">
    Issue# <input type="text" name="id" size="8" maxlength="255" />
       <input type="submit" name="Submit" value="Find" />
