--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -1,8 +1,10 @@
+## Before you can use this macro, $module must be defined
+
 #macro( advancedQuery )
 
-#set ( $search = $scarabR.Search )
-#set ( $intake = $scarabR.getConditionalIntake($scarabG.Constant.CURRENT_QUERY))
-#set ( $query = $intake.SearchIssue.mapTo($search) )
+#set ($search = $scarabR.Search)
+#set ($intake = $scarabR.getConditionalIntake($scarabG.Constant.CURRENT_QUERY))
+#set ($query = $intake.SearchIssue.mapTo($search))
 #set ($attrValues = $search.ModuleAttributeValuesMap)
 
 <div class="axial">
