also check to see if there is a module defined Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/screens/QueryList.vm
+++ b/src/templates/screens/QueryList.vm
@@ -13,7 +13,7 @@
    #set ($noQueries = "true")
 #end
 
-#if ($noQueries.equals("true"))
+#if ($noQueries.equals("true") || ! $module)
     <div class="alert">There are no stored queries.</div>
 #else
 
