reports still a work in progress.
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/reports/Report_1.vm
+++ b/src/templates/screens/reports/Report_1.vm
@@ -47,13 +47,11 @@
         #if ($secondCriteria)
             #foreach ( $optionGroup in $secondCriteria )
     		<td>
-                #foreach ($option in $optionGroup.Options)
-                $option.OptionId,
-                #end
+                $report.getIssueCount($option1.AttributeOption, $option2.AttributeOption, $optionGroup, $report.NewDate )
             </td>
             #end
         #else
-    		<td>XX</td>
+    		<td>FIXME</td>
         #end
     #end
     </tr>
