we want to be able to view issues in other modules, but give a warning that we are showing an issue that is really in a different module.
note: the user still needs to have a role in the other module in order to
view the issue. we should probably add checking to the Default.java screen
to make sure that the person has at least "Issue | View" permission.

-jon

--- a/src/templates/screens/ViewIssue.vm
+++ b/src/templates/screens/ViewIssue.vm
@@ -10,9 +10,9 @@
 
 #if ($currentIssueModuleId != $currentModuleId)
 <p><strong class="alert">
-The issue id, $currentIssueId, is not valid for the $currentModuleName Module	
+You are viewing an issue in a different Module than is currently selected.
 </strong></p>
-#else
+#end
 
 #if ($currentIssue)
     #set ($attrValues = $currentIssue.ModuleAttributeValuesMap)
@@ -40,5 +40,4 @@ $intake.declareGroups()
         </strong></p>
     #end
 
-#end
 #end
