--- a/src/templates/screens/Register.vm
+++ b/src/templates/screens/Register.vm
@@ -1,52 +1,72 @@
+$page.setTitle("Scarab Registration") 
+
   <div id="register" class="app">
-   $page.setTitle("Scarab Registration") 
 
-   <h2>$page.getTitle()</h2>
-
-   <p>Please enter the contact information below. Fields marked with a * are required.</p>
-   #if ($data.getMessage()) 
-   <p>$data.getMessage()</p>
-   #end 
+   <h3>$page.Title</h3>
 
    <form name="RegisterForm" action="$link.setPage("Register.vm")" method="post">
     <input type="hidden" name="action" value="Register" /> 
-    <input type="hidden" name="nextTemplate" value="RegisterConfirm.vm" /> 
-    <input type="hidden" name="cancelTemplate" value="Login.vm" /> 
-## Attempt to populate the Scarab API User object on re-display $data.Parameters.setProperties($scarabR.getUser()) 
+    <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="RegisterConfirm.vm" /> 
+    <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="Login.vm" /> 
+
+#set ($user = $data.User.getTemp($scarabG.Constant.SESSION_REGISTER))
+#if ($user.FirstName)
+#set ($regGroup = $intake.Register.mapTo($user))
+#else
+#set ($regGroup = $intake.Register.Default)
+#end
 
     <div class="axial">
      <table cellpadding="3" cellspacing="2" border="1">
       <tr>
        <th>* First Name:</th>
-       <td><input name="FirstName" value="$!scarabR.User.FirstName" type="text" size="25" /></td>
+       <td>
+        <input name="$regGroup.FirstName.Key" value="$regGroup.FirstName" type="text" size="25" />
+        #fieldErrorMsg($regGroup.FirstName "")
+       </td>
       </tr>
       <tr>
        <th> *Last Name:</th>
-       <td><input name="LastName" value="$!scarabR.User.LastName" type="text" size="25" /></td>
+       <td>
+        <input name="$regGroup.LastName.Key" value="$regGroup.LastName" type="text" size="25" />
+        #fieldErrorMsg($regGroup.LastName "")
+       </td>
       </tr>
       <tr>
        <th> *Email Address:</th>
-       <td><input name="Email" value="$!scarabR.User.Email" type="text" size="25" /> 
+       <td>
+        <input name="$regGroup.Email.Key" value="$regGroup.Email" type="text" size="25" /> 
+        #fieldErrorMsg($regGroup.Email "")
       <p>
- Note: Enter your valid email address - including your "@serviceprovider" domain.
+       Note: Enter your valid email address - including your "@serviceprovider" domain.<br/>
        For example, if your AOL screen name is joe cool, your email address is joecool@aol.com.
-</p>
+      </p>
        </td>
       </tr>
       <tr>
        <th> *Password:</th>
-       <td><input name="password" type="password" size="25" /></td>
+       <td>
+        <input name="$regGroup.Password.Key" type="password" value="$regGroup.Password" size="25" />
+        #fieldErrorMsg($regGroup.Password "")
+       </td>
       </tr>
       <tr>
        <th> *Password Confirm:</th>
-       <td><input name="password_confirm" type="password" size="25" /></td>
+       <td>
+        <input name="$regGroup.PasswordConfirm.Key" type="password" value="$regGroup.PasswordConfirm" size="25" />
+        #fieldErrorMsg($regGroup.PasswordConfirm "")
+       </td>
       </tr>
       <tr>
-       <td> </td>
-       <td><input type="submit" name="eventSubmit_doCancel" value="Cancel" /> <input type="submit" name="eventSubmit_doRegister" value="Register" /></td>
+       <td>&nbsp;</td>
+       <td>
+           <input type="submit" name="eventSubmit_doCancel" value="Cancel" />
+           <input type="submit" name="eventSubmit_doRegister" value="Register" />
+       </td>
       </tr>
      </table>
     </div>
+    $intake.declareGroups()
    </form>
   </div>
   
